# IncidentManagement2

./: .gitignore  README.md  cloudbuild.yaml  pom.xml  pyproject.toml
agents/: code_investigation.py  deployment_check.py
api/: main.py
core/: config.py
data/: PaymentsPlatform.db  deployment-history.json  historical-incidents.json  new-incident.json  servicenow-fallback-incidents.json  simulated-github-code.json
domain/: models.py
incident_management.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
repositories/: code_repository.py  json_repository.py  servicenow_repository.py
services/: advisor.py  analysis_sessions.py  azure_openai.py  incident_management.py  ollama.py
src/main/java/com/example/incident/: IncidentManagementApplication.java
src/main/java/com/example/incident/agent/: DeploymentCheckAgent.java
src/main/java/com/example/incident/config/: OllamaConfiguration.java
src/main/java/com/example/incident/model/: AgentFinding.java  DeploymentRecord.java  Incident.java  IncidentAnalysis.java  SimilarIncident.java
src/main/java/com/example/incident/repository/: DeploymentHistoryRepository.java  IncidentJsonRepository.java
src/main/java/com/example/incident/service/: IncidentAdvisor.java  IncidentManagementService.java
src/main/java/com/example/incident/vector/: InMemoryIncidentVectorStore.java
src/main/resources/: historical-incidents.json  new-incident.json
tests/: test_incident_management.py
vector/: in_memory_store.py
