[project]
name = "incident-management"
version = "1.0.0"
description = "FastAPI service for incident similarity analysis and operational guidance."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115,<1.0", "httpx>=0.27,<1.0", "uvicorn[standard]>=0.30,<1.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api*", "agents*", "core*", "domain*", "repositories*", "services*", "vector*"]

[project.optional-dependencies]
dev = ["pytest>=8.0,<9.0", "pytest-asyncio>=0.23,<1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
